--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<meta name="description" content="Subversive Series is a visual interpretation of biblical passgaes through constructivism and digital art in the spirit of the illuminated manuscript." />
+	<meta name="description" content="Subversive Series is a visual interpretation of biblical passages through constructivism and digital art in the spirit of the illuminated manuscript." />
 	<meta name="keywords" content="bible, art, constructivism" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" user-scalable="no" />
@@ -18,10 +18,10 @@
 	</title>
 
 	<!-- styles -->
-	<link href="/_themes/subvert/css/gumby.css" rel="stylesheet">
-	<link href="/_themes/subvert/css/jquery.bxslider.css" rel="stylesheet">
-	<link href="/_themes/subvert/css/jquery.fancybox.css" rel="stylesheet">
-	<link href="/_themes/subvert/css/subvert.css" rel="stylesheet">
+	<link href="//isralduke.github.io/subversive/assets/css/gumby.css" rel="stylesheet">
+	<link href="//isralduke.github.io/subversive/assets/css/jquery.bxslider.css" rel="stylesheet">
+	<link href="//isralduke.github.io/subversive/assets/css/jquery.fancybox.css" rel="stylesheet">
+	<link href="//isralduke.github.io/subversive/assets/css/subvert.css" rel="stylesheet">
 
 </head>
 <body>
@@ -44,12 +44,12 @@
 				<li>
 					<a href="/"  class="current" >Home</a>
 				</li>
-									<li><a href="/all-images" >All Images </a>
-											</li>
-									<li><a href="/about-this" >About the Series </a>
-											</li>
-									<li><a href="/the-artist" >Artist Info </a>
-											</li>
+				<li><a href="/all-images" >All Images </a>
+						</li>
+				<li><a href="/about-this" >About the Series </a>
+						</li>
+				<li><a href="/the-artist" >Artist Info </a>
+						</li>
 				
 			</ul>
 		</nav>
@@ -133,8 +133,8 @@
 	<!-- JS -->
 		
 		
-		<script src="/_themes/subvert/js/jquery.fancybox.js"></script>
-		<script src="/_themes/subvert/js/jquery.fancybox-media.js"></script>
+		<script src="//isralduke.github.io/sunversive/themes/subvert/js/jquery.fancybox.js"></script>
+		<script src="//isralduke.github.io/sunversive/themes/subvert/js/jquery.fancybox-media.js"></script>
 		
 
 	<script type="text/javascript">
