--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 	
-	<title>
-		Subversive Series
-	</title>
+	<title>Subversive Series</title>
 
 	<!-- styles -->
 	<link href="//isralduke.github.io/subversive/assets/css/gumby.css" rel="stylesheet">
@@ -42,73 +40,200 @@
 		<nav class="twelve columns">
 			<ul id="main-nav">
 				<li>
-					<a href="/"  class="current" >Home</a>
+					<a href="/" >Home</a>
 				</li>
-				<li><a href="/all-images" >All Images </a>
-						</li>
-				<li><a href="/about-this" >About the Series </a>
-						</li>
-				<li><a href="/the-artist" >Artist Info </a>
-						</li>
+									<li><a href="/all-images"  class="current" >All Images </a>
+						 					</li>
+									<li><a href="/about-this" >About the Series </a>
+											</li>
+									<li><a href="/the-artist" >Artist Info </a>
+											</li>
 				
 			</ul>
 		</nav>
 	</div><!--end row-->
 </nav>
 <!-- navigation -->
-	<div class="v-spacer">
 	<div class="row">
-		<div class="twelve columns">
-			<div class="valign row">
-				<h2 class="">An art project.</h2>
-				<div class="btn large danger">
-					<a href="/all-images/" class="">All <i class="icon-picture"></i></a>
-				</div>
-			</div>
-		</div>
-	</div><!--end row-->
+	<div class="twelve columns">
+		<h2 class="lead">All Images</h2>
+	</div>
 </div>
-
-
-<div class="v-spacer">
-	<div class="row">
-		<div class="twelve columns image-box">
-									<div class="images-feature images-big-front">
-						<a href="/all-images/mind-ear-eye" title="mind ear eye by Isral C Duke" style="background-image: url('/assets/img/mind-ear-eye-1-corinthians-2-9-isral-c-duke.png');"></a>
+<div class="row">
+	<div class="twelve columns">
+		<p class="lead">The whole list of all of the images, sorted A–Z.</p>
+	</div>
+</div>
+<div class="row">
+	<ul class="two_up tiles">
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/mind-ear-eye" class="image-detail-link " title="mind ear eye, from 1 corinthians 2:9 by Isral C Duke" style="background-image: url('/assets/img/mind-ear-eye-1-corinthians-2-9-isral-c-duke.png');"></a>
 					</div>
-				
-			<p class="dark label image-title-overlay"><i class="icon-eye"></i> Here&rsquo;s a random selection!</p>
-		</div>
-	</div>
+					<div class="eight columns">
+						<h4>mind ear eye</h4>
+						<p>1 corinthians 2:9</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/evolution" class="image-detail-link " title="evolution, from romans 5:8 by Isral C Duke" style="background-image: url('/assets/img/evolution-romans-5-8-isral-c-duke.svg');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>evolution</h4>
+						<p>romans 5:8</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/jesus-said-he-is" class="image-detail-link " title="jesus said he is, from john 8:58 by Isral C Duke" style="background-image: url('/assets/img/jesus-said-He-is-john-8-58-isral-c-duke.png');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>jesus said he is</h4>
+						<p>john 8:58</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/not-ashamed-of-power" class="image-detail-link " title="not ashamed of power, from Romans 1:16 by Isral C Duke" style="background-image: url('/assets/img/not-ashamed-of-power-romans-1-16-isral-c-duke-20160416203014.png');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>not ashamed of power</h4>
+						<p>Romans 1:16</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/baseline" class="image-detail-link " title="baseline, from luke 23:39–44 by Isral C Duke" style="background-image: url('/assets/img/baseline-luke-23-39-44-isral-c-duke.svg');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>baseline</h4>
+						<p>luke 23:39–44</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/the-beloved-son" class="image-detail-link " title="the beloved son, from matthew 3:17 by Isral C Duke" style="background-image: url('/assets/img/the-beloved-son-matthew-3-17-isral-c-duke.png');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>the beloved son</h4>
+						<p>matthew 3:17</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/exactly-perfect" class="image-detail-link " title="exactly perfect, from hebrews 1:3 by Isral C Duke" style="background-image: url('/assets/img/exactly-perfect-hebrews-1-3-isral-c-duke.png');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>exactly perfect</h4>
+						<p>hebrews 1:3</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/consider-yourself" class="image-detail-link " title="consider yourself, from philippians 2:4 by Isral C Duke" style="background-image: url('/assets/img/consider-yourself-philippians-2-4-isral-d-duke.svg');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>consider yourself</h4>
+						<p>philippians 2:4</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/inversion" class="image-detail-link " title="inversion, from isaiah 5:20 by Isral C Duke" style="background-image: url('/assets/img/inversion-isaiah-5-20-isral-c-duke.svg');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>inversion</h4>
+						<p>isaiah 5:20</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/blameless" class="image-detail-link " title="blameless, from titus 1:7–8 by Isral C Duke" style="background-image: url('/assets/img/blameless-titus-1-7-8-isral-c-duke.svg');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>blameless</h4>
+						<p>titus 1:7–8</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/future-proof" class="image-detail-link " title="future proof, from jeremiah 29:11 by Isral C Duke" style="background-image: url('/assets/img/Future-Proof-isaiah-29-11-isral-c-duke.png');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>future proof</h4>
+						<p>jeremiah 29:11</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/think-whatever" class="image-detail-link " title="think whatever, from Philippians 4:8 by Isral C Duke" style="background-image: url('/assets/img/think-whatever-philippians-4-8-isral-c-duke.svg');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>think whatever</h4>
+						<p>Philippians 4:8</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/the-way-to-love-the-world" class="image-detail-link " title="the way to love the world, from john 3:16 by Isral C Duke" style="background-image: url('/assets/img/The-way-to-love-the-world-john-3-16-isral-c-duke.svg');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>the way to love the world</h4>
+						<p>john 3:16</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/all-who-believe" class="image-detail-link " title="all who believe, from romans 1:16 by Isral C Duke" style="background-image: url('/assets/img/all-who-believe-romans-1-16-isral-c-duke.png');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>all who believe</h4>
+						<p>romans 1:16</p>
+					</div>
+				</div>
+			</li>
+				<li class="li-all-images">
+				<div class="row">
+					<div class="four columns">
+						<a href="/all-images/no-condemnation" class="image-detail-link " title="no condemnation, from john 8:11 by Isral C Duke" style="background-image: url('/assets/img/no-condemnation-john-8-11-isral-c-duke.svg');"></a>
+					</div>
+					<div class="eight columns">
+						<h4>no condemnation</h4>
+						<p>john 8:11</p>
+					</div>
+				</div>
+			</li>
+	
+	</ul>
 </div>
-
-
-<div class="v-spacer">
-	<div class="row">
-					<div class="three columns">
-				<div class="images-feature ">
-					<a href="/all-images/jesus-said-he-is" class=" images-feature-four"  style="background-image: url('/assets/img/jesus-said-He-is-john-8-58-isral-c-duke.png');"></a>
-				</div>
-			</div>
-					<div class="three columns">
-				<div class="images-feature ">
-					<a href="/all-images/no-condemnation" class=" images-feature-four"  style="background-image: url('/assets/img/no-condemnation-john-8-11-isral-c-duke.svg');"></a>
-				</div>
-			</div>
-					<div class="three columns">
-				<div class="images-feature ">
-					<a href="/all-images/consider-yourself" class=" images-feature-four"  style="background-image: url('/assets/img/consider-yourself-philippians-2-4-isral-d-duke.svg');"></a>
-				</div>
-			</div>
-					<div class="three columns">
-				<div class="images-feature ">
-					<a href="/all-images/all-who-believe" class=" images-feature-four"  style="background-image: url('/assets/img/all-who-believe-romans-1-16-isral-c-duke.png');"></a>
-				</div>
-			</div>
-		
-	</div>
-</div>
-
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -133,8 +258,8 @@
 	<!-- JS -->
 		
 		
-		<script src="//isralduke.github.io/sunversive/themes/subvert/js/jquery.fancybox.js"></script>
-		<script src="//isralduke.github.io/sunversive/themes/subvert/js/jquery.fancybox-media.js"></script>
+		<script src="/_themes/subvert/js/jquery.fancybox.js"></script>
+		<script src="/_themes/subvert/js/jquery.fancybox-media.js"></script>
 		
 
 	<script type="text/javascript">
