--- a/index.html
+++ b/index.html
@@ -3,24 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
 	<meta name="description" content="Subversive Series is a visual interpretation of biblical passages through constructivism and digital art in the spirit of the illuminated manuscript." />
 	<meta name="keywords" content="bible, art, constructivism" />
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" user-scalable="no" />
-
 	<script type="text/javascript" src="//use.typekit.net/ozg3zkm.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
-	
 	<title>Subversive Series</title>
-
 	<!-- styles -->
 	<link href="//isralduke.github.io/subversive/assets/css/gumby.css" rel="stylesheet">
 	<link href="//isralduke.github.io/subversive/assets/css/jquery.bxslider.css" rel="stylesheet">
 	<link href="//isralduke.github.io/subversive/assets/css/jquery.fancybox.css" rel="stylesheet">
 	<link href="//isralduke.github.io/subversive/assets/css/subvert.css" rel="stylesheet">
-
 </head>
 <body>
 	<!-- navigation -->
@@ -39,16 +32,7 @@
 
 		<nav class="twelve columns">
 			<ul id="main-nav">
-				<li>
-					<a href="/" >Home</a>
-				</li>
-									<li><a href="/all-images"  class="current" >All Images </a>
-						 					</li>
-									<li><a href="/about-this" >About the Series </a>
-											</li>
-									<li><a href="/the-artist" >Artist Info </a>
-											</li>
-				
+				{% include nav-items.html %}
 			</ul>
 		</nav>
 	</div><!--end row-->
