--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
 
 		<nav class="twelve columns">
 			<ul id="main-nav">
-				{% include nav-items.html %}
+				<li>
+					<a href="/" >Home</a>
+				</li>
+				<li>
+					<a href="/all-images"  class="current" >All Images </a>
+				</li>
+				<li>
+					<a href="/about-this" >About the Series </a>
+				</li>
+				<li>
+					<a href="/the-artist" >Artist Info </a>
+				</li>
 			</ul>
 		</nav>
 	</div><!--end row-->
