--- a/index.html
+++ b/index.html
@@ -29,20 +29,16 @@
 	</div><!--end black-bg-->
 	<div class="row">
 		<a class="toggle" gumby-trigger="#navbar-main-nav ul" href="#"><i class="icon-menu"></i></a>
-
 		<nav class="twelve columns">
 			<ul id="main-nav">
 				<li>
-					<a href="/" >Home</a>
+					<a href="//isralduke.github.io/subversive/" >Home</a>
 				</li>
 				<li>
-					<a href="/all-images"  class="current" >All Images </a>
+					<a href="//isralduke.github.io/subversive//about-this" >About the Series </a>
 				</li>
 				<li>
-					<a href="/about-this" >About the Series </a>
-				</li>
-				<li>
-					<a href="/the-artist" >Artist Info </a>
+					<a href="//isralduke.github.io/subversive//the-artist" >Artist Info </a>
 				</li>
 			</ul>
 		</nav>
