--- a/the-artist/index.html
+++ b/the-artist/index.html
@@ -31,18 +31,17 @@
 		<a class="toggle" gumby-trigger="#navbar-main-nav ul" href="#"><i class="icon-menu"></i></a>
 
 		<nav class="twelve columns">
-			<ul id="main-nav">
-				<li>
-					<a href="/" >Home</a>
-				</li>
-									<li><a href="/all-images" >All Images </a>
-											</li>
-									<li><a href="/about-this" >About the Series </a>
-											</li>
-									<li><a href="/the-artist"  class="current" >Artist Info </a>
-						 					</li>
-				
-			</ul>
+				<ul id="main-nav">
+						<li>
+							<a href="//isralduke.github.io/subversive/" >Home</a>
+						</li>
+						<li>
+							<a href="//isralduke.github.io/subversive//about-this" >About the Series </a>
+						</li>
+						<li>
+							<a href="//isralduke.github.io/subversive//the-artist" >Artist Info </a>
+						</li>
+					</ul>
 		</nav>
 	</div><!--end row-->
 </nav>
