--- a/about-this/index.html
+++ b/about-this/index.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="twelve columns ">
 				<h1 class="">
-					<a class="header-a" href="/">Subversive Series</a>
+					<a class="header-a" href="//isralduke.github.io/subversive">Subversive Series</a>
 				</h1>
 			</div>
 		</div>
@@ -87,13 +87,13 @@
 <div class="row">
 	<div class="twelve columns">
 		<h3>Wassily Kandinsky</h3>
-		<div><p><a href="/assets/img/Wassily-Kandinsky.jpg" class="fancybox fancybox-effects-d"><img class="image rounded bio-photo" src="/assets/img/Wassily-Kandinsky.jpg" /></a><a href="http://en.wikipedia.org/wiki/Wassily_Kandinsky" target="_blank">Wassily Kandinsky<i class="icon-link"></i></a> was a Russian lawyer who became a painter and later a teacher at the Bauhaus. His work was heavy influenced by his spirituality, as evident in his book Concerning the Spiritual in Art (<span class="notEn">Uber das Geistige in der Kunst</span>). He promoted the idea that art should be liberated from Nature in order to promote the spirit, as a reaction against the encroachment of materialism upon art and society. In the same book mentioned above, he stated that art&rsquo;s purpose was to feed the soul, and that artists should honor this their primary duty to society.</p></div>
+		<div><p><a href="//isralduke.github.io/subversive/assets/img/Wassily-Kandinsky.jpg" class="fancybox fancybox-effects-d"><img class="image rounded bio-photo" src="//isralduke.github.io/subversive/assets/img/Wassily-Kandinsky.jpg" /></a><a href="http://en.wikipedia.org/wiki/Wassily_Kandinsky" target="_blank">Wassily Kandinsky<i class="icon-link"></i></a> was a Russian lawyer who became a painter and later a teacher at the Bauhaus. His work was heavy influenced by his spirituality, as evident in his book Concerning the Spiritual in Art (<span class="notEn">Uber das Geistige in der Kunst</span>). He promoted the idea that art should be liberated from Nature in order to promote the spirit, as a reaction against the encroachment of materialism upon art and society. In the same book mentioned above, he stated that art&rsquo;s purpose was to feed the soul, and that artists should honor this their primary duty to society.</p></div>
 	</div>
 </div>
 <div class="row">
 	<div class="twelve columns">
 		<h3>C.S. Lewis</h3>
-		<div><p><a href="/assets/img/CS-Lewis.jpg" class="fancybox fancybox-effects-d"><img class="image rounded bio-photo" src="/assets/img/CS-Lewis.jpg" /></a><a href="http://en.wikipedia.org/wiki/C._S._Lewis" target="_blank">CS Lewis<i class="icon-link"></i></a> was an Oxford professor and Christian apologist who wrote a great many books  explaining the Christian faith and novels as allegories of the Christian faith. In his own works, Lewis uses many lessons that he himself learns from earlier influences such as Greek and Norse mythology, and the Romantic poets. Lewis saw his own love for literature, writing, as a tool by which Christ may draw a person to Himself.</p></div>
+		<div><p><a href="//isralduke.github.io/subversive/assets/img/CS-Lewis.jpg" class="fancybox fancybox-effects-d"><img class="image rounded bio-photo" src="//isralduke.github.io/subversive/assets/img/CS-Lewis.jpg" /></a><a href="http://en.wikipedia.org/wiki/C._S._Lewis" target="_blank">CS Lewis<i class="icon-link"></i></a> was an Oxford professor and Christian apologist who wrote a great many books  explaining the Christian faith and novels as allegories of the Christian faith. In his own works, Lewis uses many lessons that he himself learns from earlier influences such as Greek and Norse mythology, and the Romantic poets. Lewis saw his own love for literature, writing, as a tool by which Christ may draw a person to Himself.</p></div>
 	</div>
 </div>
 	<script>
@@ -120,8 +120,8 @@
 	<!-- JS -->
 		
 		
-		<script src="/_themes/subvert/js/jquery.fancybox.js"></script>
-		<script src="/_themes/subvert/js/jquery.fancybox-media.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox-media.js"></script>
 		
 
 	<script type="text/javascript">
