--- a/all-images/jesus-said-he-is/index.html
+++ b/all-images/jesus-said-he-is/index.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="twelve columns ">
 				<h1 class="">
-					<a class="header-a" href="/">Subversive Series</a>
+					<a class="header-a" href="//isralduke.github.io/subversive">Subversive Series</a>
 				</h1>
 			</div>
 		</div>
@@ -53,7 +53,7 @@
 			<h3>john 8:58</h3>
 			<div class="row art-row">
 				<div class="five columns">
-					<a href="/assets/img/jesus-said-He-is-john-8-58-isral-c-duke.png"  class="fancybox fancybox-effects-d image-detail" title="jesus said he is by Isral C Duke. A visual interpretation of john 8:58" style="background-image: url('/assets/img/jesus-said-He-is-john-8-58-isral-c-duke.png');" />
+					<a href="//isralduke.github.io/subversive/assets/img/jesus-said-He-is-john-8-58-isral-c-duke.png"  class="fancybox fancybox-effects-d image-detail" title="jesus said he is by Isral C Duke. A visual interpretation of john 8:58" style="background-image: url('//isralduke.github.io/subversive/assets/img/jesus-said-He-is-john-8-58-isral-c-duke.png');" />
 						
 					</a>
 				</div>
@@ -107,8 +107,8 @@
 	<!-- JS -->
 		
 		
-		<script src="/_themes/subvert/js/jquery.fancybox.js"></script>
-		<script src="/_themes/subvert/js/jquery.fancybox-media.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox-media.js"></script>
 		
 
 	<script type="text/javascript">
