--- a/all-images/the-beloved-son/index.html
+++ b/all-images/the-beloved-son/index.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="twelve columns ">
 				<h1 class="">
-					<a class="header-a" href="/">Subversive Series</a>
+					<a class="header-a" href="//isralduke.github.io/subversive">Subversive Series</a>
 				</h1>
 			</div>
 		</div>
@@ -53,7 +53,7 @@
 			<h3>matthew 3:17</h3>
 			<div class="row art-row">
 				<div class="five columns">
-					<a href="/assets/img/the-beloved-son-matthew-3-17-isral-c-duke.png"  class="fancybox fancybox-effects-d image-detail" title="the beloved son by Isral C Duke. A visual interpretation of matthew 3:17" style="background-image: url('/assets/img/the-beloved-son-matthew-3-17-isral-c-duke.png');" />
+					<a href="//isralduke.github.io/subversive/assets/img/the-beloved-son-matthew-3-17-isral-c-duke.png"  class="fancybox fancybox-effects-d image-detail" title="the beloved son by Isral C Duke. A visual interpretation of matthew 3:17" style="background-image: url('//isralduke.github.io/subversive/assets/img/the-beloved-son-matthew-3-17-isral-c-duke.png');" />
 						
 					</a>
 				</div>
@@ -76,7 +76,7 @@
 				<div class="twelve columns">
 					<article>
 						<p>Scores of churches may tell people that they have to do this or do that, behave like this or like that in order to get to Heaven. But, they’re wrong. And not just wrong, they’re lying.</p>
-<p>Jesus has already fulfilled all the requirements of God for us, because we can’t. We can’t be good enough on our own, or good enough for God’s high standards. <a href="/all-images/evolution" title="Hope in Jesus, provided by God">Belief in Jesus is our God-provided loophole.</a></p>
+<p>Jesus has already fulfilled all the requirements of God for us, because we can’t. We can’t be good enough on our own, or good enough for God’s high standards. <a href="//isralduke.github.io/subversive/all-images/evolution" title="Hope in Jesus, provided by God">Belief in Jesus is our God-provided loophole.</a></p>
 					</article>
 				</div>
 			</div>
@@ -107,8 +107,8 @@
 	<!-- JS -->
 		
 		
-		<script src="/_themes/subvert/js/jquery.fancybox.js"></script>
-		<script src="/_themes/subvert/js/jquery.fancybox-media.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox-media.js"></script>
 		
 
 	<script type="text/javascript">
