--- a/all-images/think-whatever/index.html
+++ b/all-images/think-whatever/index.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="twelve columns ">
 				<h1 class="">
-					<a class="header-a" href="/">Subversive Series</a>
+					<a class="header-a" href="//isralduke.github.io/subversive">Subversive Series</a>
 				</h1>
 			</div>
 		</div>
@@ -53,7 +53,7 @@
 			<h3>Philippians 4:8</h3>
 			<div class="row art-row">
 				<div class="five columns">
-					<a href="/assets/img/think-whatever-philippians-4-8-isral-c-duke.svg"  class="fancybox fancybox-effects-d image-detail" title="think whatever by Isral C Duke. A visual interpretation of Philippians 4:8" style="background-image: url('/assets/img/think-whatever-philippians-4-8-isral-c-duke.svg');" />
+					<a href="//isralduke.github.io/subversive/assets/img/think-whatever-philippians-4-8-isral-c-duke.svg"  class="fancybox fancybox-effects-d image-detail" title="think whatever by Isral C Duke. A visual interpretation of Philippians 4:8" style="background-image: url('//isralduke.github.io/subversive/assets/img/think-whatever-philippians-4-8-isral-c-duke.svg');" />
 						
 					</a>
 				</div>
@@ -75,7 +75,7 @@
 			<div class="row">
 				<div class="twelve columns">
 					<article>
-						<p>He definitely holds that controlling one’s thoughts to be a key factor in spiritual health. <a href="/all-images/self-control-not-fear/">It’s not the first time that Paul has advocated self-control to his audience.</a></p>
+						<p>He definitely holds that controlling one’s thoughts to be a key factor in spiritual health. <a href="//isralduke.github.io/subversive/all-images/self-control-not-fear/">It’s not the first time that Paul has advocated self-control to his audience.</a></p>
 <p>As this verse is undeniably something that Paul recommends to be good for us, I thought it best to use bright, warm, energetic colors. Note that the lowercase “i” suggests a happy person while the dot atop that lowercase “i” leads your eye into a thought balloon containing Paul’s recommendations.</p>
 					</article>
 				</div>
@@ -107,8 +107,8 @@
 	<!-- JS -->
 		
 		
-		<script src="/_themes/subvert/js/jquery.fancybox.js"></script>
-		<script src="/_themes/subvert/js/jquery.fancybox-media.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox-media.js"></script>
 		
 
 	<script type="text/javascript">
