--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="twelve columns ">
 				<h1 class="">
-					<a class="header-a" href="/">Subversive Series</a>
+					<a class="header-a" href="//isralduke.github.io/subversive">Subversive Series</a>
 				</h1>
 			</div>
 		</div>
@@ -60,7 +60,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/mind-ear-eye" class="image-detail-link " title="mind ear eye, from 1 corinthians 2:9 by Isral C Duke" style="background-image: url('/assets/img/mind-ear-eye-1-corinthians-2-9-isral-c-duke.png');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/mind-ear-eye" class="image-detail-link " title="mind ear eye, from 1 corinthians 2:9 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/mind-ear-eye-1-corinthians-2-9-isral-c-duke.png');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>mind ear eye</h4>
@@ -71,7 +71,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/evolution" class="image-detail-link " title="evolution, from romans 5:8 by Isral C Duke" style="background-image: url('/assets/img/evolution-romans-5-8-isral-c-duke.svg');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/evolution" class="image-detail-link " title="evolution, from romans 5:8 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/evolution-romans-5-8-isral-c-duke.svg');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>evolution</h4>
@@ -82,7 +82,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/jesus-said-he-is" class="image-detail-link " title="jesus said he is, from john 8:58 by Isral C Duke" style="background-image: url('/assets/img/jesus-said-He-is-john-8-58-isral-c-duke.png');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/jesus-said-he-is" class="image-detail-link " title="jesus said he is, from john 8:58 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/jesus-said-He-is-john-8-58-isral-c-duke.png');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>jesus said he is</h4>
@@ -93,7 +93,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/not-ashamed-of-power" class="image-detail-link " title="not ashamed of power, from Romans 1:16 by Isral C Duke" style="background-image: url('/assets/img/not-ashamed-of-power-romans-1-16-isral-c-duke-20160416203014.png');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/not-ashamed-of-power" class="image-detail-link " title="not ashamed of power, from Romans 1:16 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/not-ashamed-of-power-romans-1-16-isral-c-duke-20160416203014.png');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>not ashamed of power</h4>
@@ -104,7 +104,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/baseline" class="image-detail-link " title="baseline, from luke 23:39–44 by Isral C Duke" style="background-image: url('/assets/img/baseline-luke-23-39-44-isral-c-duke.svg');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/baseline" class="image-detail-link " title="baseline, from luke 23:39–44 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/baseline-luke-23-39-44-isral-c-duke.svg');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>baseline</h4>
@@ -115,7 +115,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/the-beloved-son" class="image-detail-link " title="the beloved son, from matthew 3:17 by Isral C Duke" style="background-image: url('/assets/img/the-beloved-son-matthew-3-17-isral-c-duke.png');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/the-beloved-son" class="image-detail-link " title="the beloved son, from matthew 3:17 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/the-beloved-son-matthew-3-17-isral-c-duke.png');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>the beloved son</h4>
@@ -126,7 +126,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/exactly-perfect" class="image-detail-link " title="exactly perfect, from hebrews 1:3 by Isral C Duke" style="background-image: url('/assets/img/exactly-perfect-hebrews-1-3-isral-c-duke.png');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/exactly-perfect" class="image-detail-link " title="exactly perfect, from hebrews 1:3 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/exactly-perfect-hebrews-1-3-isral-c-duke.png');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>exactly perfect</h4>
@@ -137,7 +137,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/consider-yourself" class="image-detail-link " title="consider yourself, from philippians 2:4 by Isral C Duke" style="background-image: url('/assets/img/consider-yourself-philippians-2-4-isral-d-duke.svg');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/consider-yourself" class="image-detail-link " title="consider yourself, from philippians 2:4 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/consider-yourself-philippians-2-4-isral-d-duke.svg');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>consider yourself</h4>
@@ -148,7 +148,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/inversion" class="image-detail-link " title="inversion, from isaiah 5:20 by Isral C Duke" style="background-image: url('/assets/img/inversion-isaiah-5-20-isral-c-duke.svg');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/inversion" class="image-detail-link " title="inversion, from isaiah 5:20 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/inversion-isaiah-5-20-isral-c-duke.svg');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>inversion</h4>
@@ -159,7 +159,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/blameless" class="image-detail-link " title="blameless, from titus 1:7–8 by Isral C Duke" style="background-image: url('/assets/img/blameless-titus-1-7-8-isral-c-duke.svg');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/blameless" class="image-detail-link " title="blameless, from titus 1:7–8 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/blameless-titus-1-7-8-isral-c-duke.svg');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>blameless</h4>
@@ -170,7 +170,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/future-proof" class="image-detail-link " title="future proof, from jeremiah 29:11 by Isral C Duke" style="background-image: url('/assets/img/Future-Proof-isaiah-29-11-isral-c-duke.png');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/future-proof" class="image-detail-link " title="future proof, from jeremiah 29:11 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/Future-Proof-isaiah-29-11-isral-c-duke.png');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>future proof</h4>
@@ -181,7 +181,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/think-whatever" class="image-detail-link " title="think whatever, from Philippians 4:8 by Isral C Duke" style="background-image: url('/assets/img/think-whatever-philippians-4-8-isral-c-duke.svg');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/think-whatever" class="image-detail-link " title="think whatever, from Philippians 4:8 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/think-whatever-philippians-4-8-isral-c-duke.svg');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>think whatever</h4>
@@ -192,7 +192,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/the-way-to-love-the-world" class="image-detail-link " title="the way to love the world, from john 3:16 by Isral C Duke" style="background-image: url('/assets/img/The-way-to-love-the-world-john-3-16-isral-c-duke.svg');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/the-way-to-love-the-world" class="image-detail-link " title="the way to love the world, from john 3:16 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/The-way-to-love-the-world-john-3-16-isral-c-duke.svg');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>the way to love the world</h4>
@@ -203,7 +203,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/all-who-believe" class="image-detail-link " title="all who believe, from romans 1:16 by Isral C Duke" style="background-image: url('/assets/img/all-who-believe-romans-1-16-isral-c-duke.png');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/all-who-believe" class="image-detail-link " title="all who believe, from romans 1:16 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/all-who-believe-romans-1-16-isral-c-duke.png');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>all who believe</h4>
@@ -214,7 +214,7 @@
 				<li class="li-all-images">
 				<div class="row">
 					<div class="four columns">
-						<a href="/all-images/no-condemnation" class="image-detail-link " title="no condemnation, from john 8:11 by Isral C Duke" style="background-image: url('/assets/img/no-condemnation-john-8-11-isral-c-duke.svg');"></a>
+						<a href="//isralduke.github.io/subversive/all-images/no-condemnation" class="image-detail-link " title="no condemnation, from john 8:11 by Isral C Duke" style="background-image: url('//isralduke.github.io/subversive/assets/img/no-condemnation-john-8-11-isral-c-duke.svg');"></a>
 					</div>
 					<div class="eight columns">
 						<h4>no condemnation</h4>
@@ -249,8 +249,8 @@
 	<!-- JS -->
 		
 		
-		<script src="/_themes/subvert/js/jquery.fancybox.js"></script>
-		<script src="/_themes/subvert/js/jquery.fancybox-media.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox-media.js"></script>
 		
 
 	<script type="text/javascript">
