--- a/all-images/baseline/index.html
+++ b/all-images/baseline/index.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="twelve columns ">
 				<h1 class="">
-					<a class="header-a" href="/">Subversive Series</a>
+					<a class="header-a" href="//isralduke.github.io/subversive">Subversive Series</a>
 				</h1>
 			</div>
 		</div>
@@ -53,7 +53,7 @@
 			<h3>luke 23:39–44</h3>
 			<div class="row art-row">
 				<div class="five columns">
-					<a href="/assets/img/baseline-luke-23-39-44-isral-c-duke.svg"  class="fancybox fancybox-effects-d image-detail" title="baseline by Isral C Duke. A visual interpretation of luke 23:39–44" style="background-image: url('/assets/img/baseline-luke-23-39-44-isral-c-duke.svg');" />
+					<a href="//isralduke.github.io/subversive/assets/img/baseline-luke-23-39-44-isral-c-duke.svg"  class="fancybox fancybox-effects-d image-detail" title="baseline by Isral C Duke. A visual interpretation of luke 23:39–44" style="background-image: url('//isralduke.github.io/subversive/assets/img/baseline-luke-23-39-44-isral-c-duke.svg');" />
 						
 					</a>
 				</div>
@@ -108,8 +108,8 @@
 	<!-- JS -->
 		
 		
-		<script src="/_themes/subvert/js/jquery.fancybox.js"></script>
-		<script src="/_themes/subvert/js/jquery.fancybox-media.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox-media.js"></script>
 		
 
 	<script type="text/javascript">
