--- a/all-images/not-ashamed-of-power/index.html
+++ b/all-images/not-ashamed-of-power/index.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="twelve columns ">
 				<h1 class="">
-					<a class="header-a" href="/">Subversive Series</a>
+					<a class="header-a" href="//isralduke.github.io/subversive">Subversive Series</a>
 				</h1>
 			</div>
 		</div>
@@ -53,7 +53,7 @@
 			<h3>Romans 1:16</h3>
 			<div class="row art-row">
 				<div class="five columns">
-					<a href="/assets/img/not-ashamed-of-power-romans-1-16-isral-c-duke-20160416203014.png"  class="fancybox fancybox-effects-d image-detail" title="not ashamed of power by Isral C Duke. A visual interpretation of Romans 1:16" style="background-image: url('/assets/img/not-ashamed-of-power-romans-1-16-isral-c-duke-20160416203014.png');" />
+					<a href="//isralduke.github.io/subversive/assets/img/not-ashamed-of-power-romans-1-16-isral-c-duke-20160416203014.png"  class="fancybox fancybox-effects-d image-detail" title="not ashamed of power by Isral C Duke. A visual interpretation of Romans 1:16" style="background-image: url('//isralduke.github.io/subversive/assets/img/not-ashamed-of-power-romans-1-16-isral-c-duke-20160416203014.png');" />
 						
 					</a>
 				</div>
@@ -106,8 +106,8 @@
 	<!-- JS -->
 		
 		
-		<script src="/_themes/subvert/js/jquery.fancybox.js"></script>
-		<script src="/_themes/subvert/js/jquery.fancybox-media.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox-media.js"></script>
 		
 
 	<script type="text/javascript">
