--- a/the-artist/index.html
+++ b/the-artist/index.html
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="twelve columns ">
 				<h1 class="">
-					<a class="header-a" href="/">Subversive Series</a>
+					<a class="header-a" href="//isralduke.github.io/subversive">Subversive Series</a>
 				</h1>
 			</div>
 		</div>
@@ -67,33 +67,20 @@
 </div>
 
 	
-<div class="row">
-	<div class="twelve columns">
-		<h3>Other Projects</h3>
-		<div><div class="btn danger medium"><a class="" href="http://www.dukebranding.com" target="_blank"><i class="icon-network"></i> Duke Branding &raquo;  </a></div> <div class="btn danger medium"><a class="" href="http://www.silentsights.com" target="_blank"><i class="icon-network"></i> Silent Sights &raquo; </a></div></div>
-	</div>
-</div>
+
 <div class="row">
 	<div class="twelve columns">
 		<h3>Social Media</h3>
-		<div><div class="btn danger medium"><a class="" href="https://www.facebook.com/isralduke" target="_blank"><i class="icon-facebook"></i> Facebook &raquo; </a></div> <div class="btn danger medium"><a class="" href="https://twitter.com/isralduke" target="_blank"><i class="icon-twitter"></i> Twitter &raquo; </a></div> <div class="btn danger medium"><a class="" href="http://instagram.com/isralduke" target="_blank"><i class="icon-instagram"></i> Instagram &raquo; </a></div></div>
+		<div>
+			<div class="btn danger medium"><a class="" href="https://twitter.com/isralduke" target="_blank"><i class="icon-twitter"></i> Twitter &raquo; </a></div> 
+			<div class="btn danger medium"><a class="" href="http://instagram.com/isralduke" target="_blank"><i class="icon-instagram"></i> Instagram &raquo; </a></div></div>
 	</div>
 </div>
 	
 
 	
-<div class="row">
-	<div class="twelve columns">
-		<h3></h3>
-		<div></div>
-	</div>
-</div>
-<div class="row">
-	<div class="twelve columns">
-		<h3></h3>
-		<div></div>
-	</div>
-</div>
+
+
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -118,8 +105,8 @@
 	<!-- JS -->
 		
 		
-		<script src="/_themes/subvert/js/jquery.fancybox.js"></script>
-		<script src="/_themes/subvert/js/jquery.fancybox-media.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox.js"></script>
+		<script src="//isralduke.github.io/subversive/assets/js/jquery.fancybox-media.js"></script>
 		
 
 	<script type="text/javascript">
